tests/typing/bad/testfile-constructor3-1.scala
class A(x: Int) {
    def m() { var a: A = new A(true) }
}
object Main { def main(args: Array[String]) { } }
